--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -20,7 +20,7 @@
   color: var(--primary-grayishBlue);
   cursor: pointer;
 }
-a:hover {
+.linkPage:hover {
   color: var(--primary-cyan);
 }
 .hamburgerIcon {
