--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -33,7 +33,7 @@ h1 {
 .btnMain {
   border: none;
   text-transform: uppercase;
-  padding: 17px 0;
+  padding: 17px 0 17px 17px;
   width: 100%;
   font-family: "Public Sans", sans-serif;
   font-weight: 400;
